# libhello

./: CMakeLists.txt  CONTRIBUTING.md  README.md  dependencies.cmake  options.cmake
cmake/: get_cpm.cmake  libhelloConfig.cmake
examples/: CMakeLists.txt
include/libhello/: hello.hpp
packaging/: CMakeLists.txt
src/: CMakeLists.txt  hello.cpp
